--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,41 @@ body {
   color: #333;
 }
 
-.features-container {
+.features-container1 {
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.image {
+  
+  max-width: 106px;
+  max-height: 37px;
+  
+  display: flex;
+
+}
+
+.image1 img {
+  margin: 0.5px 0 0 0;
+  min-width: 30px;
+  max-width: 30px;
+  max-height: 34px;
+  min-height: 34px;
+}
+
+.image2 img {
+  margin: 8px auto auto 7px;
+  
+  max-width: 65px;
+  
+  
+}
+
+.features-container2 {
   max-width: 1000px;
   margin: 0 auto;
   display: flex;
