--- a/styles/style.css
+++ b/styles/style.css
@@ -13,8 +13,6 @@ body {
   max-width: 1000px;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
-  gap: 30px;
   flex-wrap: wrap;
 }
 
@@ -37,6 +35,20 @@ body {
   max-width: 65px;
 }
 
+.container1 {
+  display: flex;
+  gap: 30px;
+  margin: 0px 0px 0px 40px;
+  flex-wrap: wrap;
+}
+
+.container2 {
+  display: flex;
+  gap: 30px;
+  margin: 0px 0px 0px auto;
+  flex-wrap: wrap;
+}
+
 a {
   font-family: Inter;
   font-weight: 400;
@@ -44,14 +56,14 @@ a {
   line-height: 24px;
   letter-spacing: 0.2px;
 }
-.box3 {
-  width: 139;
-  height: 36;
-  background: #0070A0;
-  padding-bottom: 10 px;
+.box1 {
+  padding: 6px 0px 8px 0px;
 }
 
-
+.box2 {
+  background: #0070A0;
+  padding: 6px 28px 8px 28px;
+}
 
 .button1 {
   color: #33383F;
@@ -67,6 +79,7 @@ a {
   color: #FFFFFF;
   text-decoration: none;
 }
+
 .features-container2 {
   max-width: 1000px;
   margin: 0 auto;
