--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ body {
   display: flex;
 }
 
-.image1 img {
+.image1 {
   margin: 0.5px 0 0 0;
   min-width: 30px;
   max-width: 30px;
@@ -30,23 +30,42 @@ body {
   min-height: 34px;
 }
 
-.image2 img {
+.image2 {
   margin: 8px auto auto 7px;
   max-width: 65px;
+}
+
+.image3 {
+  padding: 8px 0px 0px 7px;
+}
+
+.image4 {
+  padding: 0px 0px 0px 0px;
 }
 
 .container1 {
   display: flex;
   gap: 30px;
-  margin: 0px 0px 0px 40px;
+  margin: 3px 0px 0px 40px;
   flex-wrap: wrap;
 }
 
 .container2 {
   display: flex;
   gap: 30px;
+  margin: 3px 0px 0px auto;
+  flex-wrap: wrap;
+}
+
+.container3 {
+  display: flex;
   margin: 0px 0px 0px auto;
   flex-wrap: wrap;
+}
+
+.container4 {
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 a {
@@ -56,11 +75,17 @@ a {
   line-height: 24px;
   letter-spacing: 0.2px;
 }
+
 .box1 {
   padding: 6px 0px 8px 0px;
 }
 
 .box2 {
+  background: #0070A0;
+  padding: 6px 28px 8px 28px;
+}
+
+.box3 {
   background: #0070A0;
   padding: 6px 28px 8px 28px;
 }
@@ -80,13 +105,32 @@ a {
   text-decoration: none;
 }
 
+.button4 {
+  color: #0070A0;
+  text-decoration: none;
+  padding: 6px 0px 8px 28px;
+}
+
 .features-container2 {
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  gap: 142px;
+  flex-wrap: wrap;
+}
+
+.features-container3 {
   max-width: 1000px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   gap: 30px;
   flex-wrap: wrap;
+}
+
+.feature {
+  flex: 1;
 }
 
 .feature1 {
@@ -116,14 +160,28 @@ a {
   box-shadow: 0 4px 12px rgba(0,0,0,0.05);
 }
 
-.feature-title {
+.feature4 {
+  flex: 1;
+  max-width: 451.99px;
+}
+
+.feature-title1 {
+  font-family: Fraunces;
+  font-weight: 400;
+  font-size: 58px;
+  line-height: 63.8px;
+  letter-spacing: 0.2px;
+  padding: 27px 0px 0px 0px;
+}
+
+.feature-title2 {
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 15px;
   color: #2c3e50;
 }
 
-.feature-title::after {
+.feature-title2::after {
   content: "";
   display: block;
   width: 50px;
@@ -132,7 +190,16 @@ a {
   margin-top: 8px;
 }
 
-.feature-text {
+.feature-text1 {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  padding: 12px 0px 20px 0px;  
+}
+
+.feature-text2 {
   line-height: 1.6;
   color: #7f8c8d;
 }
