--- a/styles/style.css
+++ b/styles/style.css
@@ -223,3 +223,16 @@ a {
   line-height: 1.6;
   color: #7f8c8d;
 }
+
+@media ( width <= 384px ){
+  .features-container1 {
+    flex-direction: column;
+  }
+
+  .container1 {
+    display: flex;
+    margin: 3px 0 0;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+}
